Fixed: Overflow issue with diva's min width
Fixes #241

--- a/public/cantusdata/frontend/public/css/styles.scss
+++ b/public/cantusdata/frontend/public/css/styles.scss
@@ -401,6 +401,7 @@ body.propagate-height {
 .diva-outer {
     border: none;
     border-right: 1px solid $border-color;
+    min-width: 0;
 
     @include ua-support(flexbox) {
         height: 100%;
